--- a/client/Views/_signup.html
+++ b/client/Views/_signup.html
@@ -1,75 +1,77 @@
-<md-toolbar>
-	<div class="md-toolbar-tools">
-		<h1 id="title">
-			<span>CloudView</span>
-		</h1>
-		<!-- central gap -->
-		<span flex=""></span>
+<div style="height: 100vh;" layout="column">
+	<md-toolbar>
+		<div class="md-toolbar-tools">
+			<h1 id="title">
+				<span>CloudView</span>
+			</h1>
+			<!-- central gap -->
+			<span flex=""></span>
 
-		<md-button id="login-button"  ng-click="login()" class="md-button" type="button" aria-label="Login">
-			{{ "LOGIN.LOGIN" | translate }}
-		</md-button>
-	</div>
-</md-toolbar>
-<md-content class="md-padding" layout="column" layout-align="center center">
-	<form name="signupForm" ng-submit="signup()">
-		<md-card id="signup">
-			<md-card-content layout="column">
-				<div layout-gt-xs="row" layout="column">
-					<span flex></span>
-					<md-input-container>
-						<label>{{ "GENERAL.USERNAME" | translate }}</label>
-						<input ng-model="username" type="text" name="username" ng-disabled="loading.is" required xreg-pattern="^[0-9_\-\pL]+$"></input>
-						<div ng-messages="signupForm.username.$error" role="alert">
-							<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
-							<div ng-message="xregPattern">{{  }}</div>
-						</div>
-					</md-input-container>
-					<span flex></span>
+			<md-button id="login-button"  ng-click="login()" class="md-button" type="button" aria-label="Login">
+				{{ "LOGIN.LOGIN" | translate }}
+			</md-button>
+		</div>
+	</md-toolbar>
+	<md-content class="md-padding" layout="column" layout-align="center center" flex>
+		<form name="signupForm" ng-submit="signup()">
+			<md-card id="signup">
+				<md-card-content layout="column">
+					<div layout-gt-xs="row" layout="column">
+						<span flex></span>
+						<md-input-container>
+							<label>{{ "GENERAL.USERNAME" | translate }}</label>
+							<input ng-model="username" type="text" name="username" ng-disabled="loading.is" required xreg-pattern="^[0-9_\-\pL]+$"></input>
+							<div ng-messages="signupForm.username.$error" role="alert">
+								<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
+								<div ng-message="xregPattern">{{  }}</div>
+							</div>
+						</md-input-container>
+						<span flex></span>
+					</div>
+					<div layout-gt-xs="row" layout="column">
+						<md-input-container>
+							<label>{{ "GENERAL.EMAIL" | translate }}</label>
+							<input ng-model="email" name="email" type="email" ng-change="signupForm.confirmEmail.$validate();" ng-disabled="loading.is" xreg-pattern="^.+@.+\..+$" required></input>
+							<div ng-messages="signupForm.email.$error" role="alert">
+								<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
+								<div ng-message="xregPattern">That is not a valid email address.</div><!-- TODO: Localise string -->
+							</div>
+						</md-input-container>
+						<md-input-container>
+							<label>{{ "LOGIN.SIGNUP.CONFIRM_EMAIL" | translate }}</label>
+							<input ng-model="confirmEmail" name="confirm_email" type="email" data-match="signupForm.email" ng-disabled="loading.is" xreg-pattern="^.+@.+\..+$" required autocomplete="off"></input>
+							<div ng-messages="signupForm.confirm_email.$error" role="alert">
+								<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
+								<div ng-message="xregPattern">That is not a valid email address.</div><!-- TODO: Localise string -->
+								<div ng-message="match">{{ "LOGIN.SIGNUP.CONFIRM_EMAIL_NO_MATCH" | translate }}</div>
+							</div>
+						</md-input-container>
+					</div>
+					<div layout-gt-xs="row" layout="column">
+						<md-input-container>
+							<label>{{ "GENERAL.PASSWORD" | translate }}</label>
+							<input ng-model="password" type="password" name="password" ng-change="signupForm.confirmPassword.$validate();" ng-disabled="loading.is" required></input>
+							<div ng-messages="signupForm.password.$error" role="alert">
+								<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
+							</div>
+						</md-input-container>
+						<md-input-container>
+							<label>{{ "LOGIN.SIGNUP.CONFIRM_PASSWORD" | translate }}</label>
+							<input ng-model="confirmPassword" name="confirm_password" data-match="signupForm.password" type="password" ng-disabled="loading.is" required></input>
+							<div ng-messages="signupForm.confirm_password.$error" role="alert">
+								<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
+								<div ng-message="match">{{ "LOGIN.SIGNUP.CONFIRM_PASSWORD_NO_MATCH" | translate }}</div>
+							</div>
+						</md-input-container>
+					</div>
+					<div style="clear:both;"></div>
+				</md-card-content>
+				<div layout="row" layout-align="end center">
+					<md-button id="signup-button" type="submit" focus-on="signup" class="md-button md-primary" ng-disabled="loading" aria-label="Sign Up">
+						{{ "LOGIN.SIGNUP.SIGNUP" | translate }}
+					</md-button>
 				</div>
-				<div layout-gt-xs="row" layout="column">
-					<md-input-container>
-						<label>{{ "GENERAL.EMAIL" | translate }}</label>
-						<input ng-model="email" name="email" type="email" ng-change="signupForm.confirmEmail.$validate();" ng-disabled="loading.is" xreg-pattern="^.+@.+\..+$" required></input>
-						<div ng-messages="signupForm.email.$error" role="alert">
-							<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
-							<div ng-message="xregPattern">That is not a valid email address.</div><!-- TODO: Localise string -->
-						</div>
-					</md-input-container>
-					<md-input-container>
-						<label>{{ "LOGIN.SIGNUP.CONFIRM_EMAIL" | translate }}</label>
-						<input ng-model="confirmEmail" name="confirm_email" type="email" data-match="signupForm.email" ng-disabled="loading.is" xreg-pattern="^.+@.+\..+$" required autocomplete="off"></input>
-						<div ng-messages="signupForm.confirm_email.$error" role="alert">
-							<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
-							<div ng-message="xregPattern">That is not a valid email address.</div><!-- TODO: Localise string -->
-							<div ng-message="match">{{ "LOGIN.SIGNUP.CONFIRM_EMAIL_NO_MATCH" | translate }}</div>
-						</div>
-					</md-input-container>
-				</div>
-				<div layout-gt-xs="row" layout="column">
-					<md-input-container>
-						<label>{{ "GENERAL.PASSWORD" | translate }}</label>
-						<input ng-model="password" type="password" name="password" ng-change="signupForm.confirmPassword.$validate();" ng-disabled="loading.is" required></input>
-						<div ng-messages="signupForm.password.$error" role="alert">
-							<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
-						</div>
-					</md-input-container>
-					<md-input-container>
-						<label>{{ "LOGIN.SIGNUP.CONFIRM_PASSWORD" | translate }}</label>
-						<input ng-model="confirmPassword" name="confirm_password" data-match="signupForm.password" type="password" ng-disabled="loading.is" required></input>
-						<div ng-messages="signupForm.confirm_password.$error" role="alert">
-							<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
-							<div ng-message="match">{{ "LOGIN.SIGNUP.CONFIRM_PASSWORD_NO_MATCH" | translate }}</div>
-						</div>
-					</md-input-container>
-				</div>
-				<div style="clear:both;"></div>
-			</md-card-content>
-			<div layout="row" layout-align="end center">
-				<md-button id="signup-button" type="submit" focus-on="signup" class="md-button md-primary" ng-disabled="loading" aria-label="Sign Up">
-					{{ "LOGIN.SIGNUP.SIGNUP" | translate }}
-				</md-button>
-			</div>
-		</md-card>
-	</form>
-</md-content>
+			</md-card>
+		</form>
+	</md-content>
+</div>
