--- a/client/Views/_signup.html
+++ b/client/Views/_signup.html
@@ -15,6 +15,15 @@
 	<md-content class="md-padding" layout="column" layout-align="center center" flex>
 		<form name="signupForm" ng-submit="signup()">
 			<md-card id="signup">
+				<md-toolbar hide-xs>
+					<div class="md-toolbar-tools">
+						<h1 id="title">
+							<span>{{ "SIGNUP.TITLE" | translate }}</span>
+						</h1>
+						<!-- central gap -->
+						<span flex=""></span>
+					</div>
+				</md-toolbar>
 				<md-card-content layout="column">
 					<div layout-gt-xs="row" layout="column">
 						<span flex></span>
@@ -38,12 +47,12 @@
 							</div>
 						</md-input-container>
 						<md-input-container>
-							<label>{{ "LOGIN.SIGNUP.CONFIRM_EMAIL" | translate }}</label>
+							<label>{{ "SIGNUP.CONFIRM_EMAIL" | translate }}</label>
 							<input ng-model="confirmEmail" name="confirm_email" type="email" data-match="signupForm.email" ng-disabled="loading.is" xreg-pattern="^.+@.+\..+$" required autocomplete="off"></input>
 							<div ng-messages="signupForm.confirm_email.$error" role="alert">
 								<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
 								<div ng-message="xregPattern">That is not a valid email address.</div><!-- TODO: Localise string -->
-								<div ng-message="match">{{ "LOGIN.SIGNUP.CONFIRM_EMAIL_NO_MATCH" | translate }}</div>
+								<div ng-message="match">{{ "SIGNUP.CONFIRM_EMAIL_NO_MATCH" | translate }}</div>
 							</div>
 						</md-input-container>
 					</div>
@@ -56,11 +65,11 @@
 							</div>
 						</md-input-container>
 						<md-input-container>
-							<label>{{ "LOGIN.SIGNUP.CONFIRM_PASSWORD" | translate }}</label>
+							<label>{{ "SIGNUP.CONFIRM_PASSWORD" | translate }}</label>
 							<input ng-model="confirmPassword" name="confirm_password" data-match="signupForm.password" type="password" ng-disabled="loading.is" required></input>
 							<div ng-messages="signupForm.confirm_password.$error" role="alert">
 								<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
-								<div ng-message="match">{{ "LOGIN.SIGNUP.CONFIRM_PASSWORD_NO_MATCH" | translate }}</div>
+								<div ng-message="match">{{ "SIGNUP.CONFIRM_PASSWORD_NO_MATCH" | translate }}</div>
 							</div>
 						</md-input-container>
 					</div>
@@ -68,7 +77,7 @@
 				</md-card-content>
 				<div layout="row" layout-align="end center">
 					<md-button id="signup-button" type="submit" focus-on="signup" class="md-button md-primary" ng-disabled="loading" aria-label="Sign Up">
-						{{ "LOGIN.SIGNUP.SIGNUP" | translate }}
+						{{ "SIGNUP.SIGNUP" | translate }}
 					</md-button>
 				</div>
 			</md-card>
