--- a/client/Views/_home.html
+++ b/client/Views/_home.html
@@ -19,7 +19,7 @@
 			</md-card-content>
 			<md-card-actions layout="row" layout-align="end center">
 				<md-button ng-click="login()">{{ "LOGIN.LOGIN" | translate }}</md-button>
-				<md-button ng-click="signup()" class="md-primary">{{ "LOGIN.SIGNUP.SIGNUP" | translate }}</md-button>
+				<md-button ng-click="signup()" class="md-primary">{{ "SIGNUP.SIGNUP" | translate }}</md-button>
 	    	</md-card-actions>
 		</md-card>
 	</md-content>
