--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -28,7 +28,7 @@
 	}
 </style>
 <script src="./img/icons/ic_cloud_48.svg" id="cloud_ico.svg"></script>
-<div style="height: 100vh; width: 100vw; max-width: 100%" layout="row">
+<div style="height: 100vh; width: 100vw; content: 'viewport-units-buggyfill; height: 100vh; width: 100vw;';" layout="row">
     <md-sidenav class="md-sidenav-left" md-component-id="left" layout="column" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4">
         <md-toolbar class="md-tall">
             <!-- md-theme="dark-grey"> -->
@@ -75,9 +75,9 @@
                 <div layout="row" layout-align="start center" ng-init="pathSpace = ($mdMedia('gt-md') ? 3 : 2)">
 					<h1>CloudView&emsp;:</h1>
 					<h1 ng-if="folder.path.length > pathSpace">&hellip;</h1>
-					<h1 ng-repeat="f in folder.path | parentFolder: pathSpace ">
+					<!--<h1 ng-repeat="f in folder.path | parentFolder: pathSpace ">
 						<a>&emsp;{{f}}&emsp;</a>&gt;
-					</h1>
+					</h1>-->
 				</div>
                 <span flex></span>
             </div>
