Fixed Common Style for body

--- a/client/Views/_home.html
+++ b/client/Views/_home.html
@@ -1,4 +1,4 @@
-<div style="height: 100vh;" layout="column">
+<div class="body-div" layout="column">
 	<md-toolbar>
 		<div class="md-toolbar-tools">
 			<h2>CloudView</h2>
