--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -28,7 +28,7 @@
 	}
 </style>
 <script src="./img/icons/ic_cloud_48.svg" id="cloud_ico.svg"></script>
-<div style="height: 100vh; width: 100vw; content: 'viewport-units-buggyfill; height: 100vh; width: 100vw;';" layout="row">
+<div class="body-div" layout="row">
     <md-sidenav class="md-sidenav-left" md-component-id="left" layout="column" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4">
         <md-toolbar class="md-tall">
             <!-- md-theme="dark-grey"> -->
