--- a/client/Views/_login.html
+++ b/client/Views/_login.html
@@ -1,4 +1,4 @@
-<div style="height: 100vh;" layout="column">
+<div class="body-div" layout="column">
 	<md-toolbar>
 		<div class="md-toolbar-tools">
 			<h1 id="title">
