--- a/client/Views/_home.html
+++ b/client/Views/_home.html
@@ -1,4 +1,4 @@
-<div class="body-div" layout="column">
+<div id="body-div" layout="column">
 	<md-toolbar>
 		<div class="md-toolbar-tools">
 			<h2>CloudView</h2>
