--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -27,7 +27,6 @@
 		fill: #FF7777;
 	}
 </style>
-<script src="./img/icons/ic_cloud_48.svg" id="cloud_ico.svg"></script>
 <div id="body-div" layout="row">
     <md-sidenav class="md-sidenav-left" md-component-id="left" layout="column" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4">
         <md-toolbar class="md-tall">
@@ -67,21 +66,28 @@
         </md-content>
     </md-sidenav>
     <div layout="column" flex="">
-        <md-toolbar>
-            <div class="md-toolbar-tools">
-                <md-button class="md-icon-button" aria-label="Navigation" ng-click="toggleSidenav()" hide-gt-md>
-                    <md-icon md-svg-icon="Views/img/icons/menu.svg"></md-icon>
-                </md-button>
-                <div layout="row" layout-align="start center" ng-init="pathSpace = ($mdMedia('gt-md') ? 3 : 2)">
-					<h1>CloudView&emsp;:</h1>
-					<h1 ng-if="folder.path.length > pathSpace">&hellip;</h1>
-					<!--<h1 ng-repeat="f in folder.path | parentFolder: pathSpace ">
-						<a>&emsp;{{f}}&emsp;</a>&gt;
-					</h1>-->
+        <div>
+			<md-toolbar>
+	            <div class="md-toolbar-tools">
+					<md-button class="md-icon-button" aria-label="Navigation" ng-click="toggleSidenav()" hide-gt-md>
+	                    <md-icon md-svg-icon="Views/img/icons/menu.svg"></md-icon>
+	                </md-button>
+					<h1>CloudView</h1>
+					<span flex></span>
+	            </div>
+	        </md-toolbar>
+		</div>
+		<div>
+			<md-toolbar class="md-primary md-hue-50">
+				<div class="md-toolbar-tools" style="overflow-x: auto;">
+					<h1 style="white-space: nowrap;">My files &emsp;</h1>
+					<h1 ng-repeat="f in folder.path | parentFolder: 3" style="white-space: nowrap;">
+						&gt;
+						<a>&emsp;{{f}}&emsp;</a>
+					</h1>
 				</div>
-                <span flex></span>
-            </div>
-        </md-toolbar>
+			</md-toolbar>
+		</div>
         <md-content layout="column" flex="">
             <!-- TODO: stuff goes here -->
 			<div ng-show="(activeAccounts=(user.accounts | filter: {active: true })).length">
