Cleaned up sidenav to look more professional
Removed difficult to work with clouds in favour of checkboxes that are
animated out of the box.

--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -1,31 +1,62 @@
 <!-- TODO: finish codes -->
 <style>
-	.account-0 {background-color: #0088FF;} /* C64 14 LightBlue */
-	.account-1 {background-color: #AAFF66;} /* C64 13 LightGreen */
-	.account-2 {background-color: #FF7777;} /* C64 10 LightRed */
-	.account-3 {background-color: #EEEE77;} /* C64 07 Yellow */
+    .account-0 {
+        background-color: #0088FF;
+    }
+    /* C64 14 LightBlue */
+    .account-1 {
+        background-color: #AAFF66;
+    }
+    /* C64 13 LightGreen */
+    .account-2 {
+        background-color: #FF7777;
+    }
+    /* C64 10 LightRed */
+    .account-3 {
+        background-color: #EEEE77;
+    }
+    /* C64 07 Yellow */
+
 </style>
 <style>
-	.folder_item {
-		text-overflow: ellipsis;
-		overflow: hidden;
-		white-space: nowrap;
-		width: 100%;
-		display: block;
-	}
-	.folder_file figcaption {
-		width: 100%;
-		display: flex;
-	}
-	.cloud_ic_0 svg path{
-		fill: #0088FF;
-	}
-	.cloud_ic_1 svg path{
-		fill: #AAFF66;
-	}
-	.cloud_ic_2 svg path{
-		fill: #FF7777;
-	}
+    .folder_item {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+        width: 100%;
+        display: block;
+    }
+    .folder_file figcaption {
+        width: 100%;
+        display: flex;
+    }
+    .cloud_ic_0 svg path {
+        fill: #0088FF;
+    }
+    .cloud_ic_1 svg path {
+        fill: #AAFF66;
+    }
+    .cloud_ic_2 svg path {
+        fill: #FF7777;
+    }
+    md-checkbox.md-checked#account-check-0 .md-icon {
+        background-color: #0088FF;
+    }
+	md-checkbox.md-checked#account-check-1 .md-icon {
+        background-color: #AAFF66;
+    }
+	md-checkbox.md-checked#account-check-2 .md-icon {
+        background-color: #FF7777;
+    }
+	md-checkbox#account-check-0 .md-icon {
+        border-color: #0088FF;
+    }
+	md-checkbox#account-check-1 .md-icon {
+        border-color: #AAFF66;
+    }
+	md-checkbox#account-check-2 .md-icon {
+        border-color: #FF7777;
+    }
 </style>
 <div id="body-div" layout="row">
     <md-sidenav class="md-sidenav-left" md-component-id="left" layout="column" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4">
@@ -48,98 +79,99 @@
             <section>
                 <md-subheader class="md-primary">Accounts</md-subheader>
                 <md-list layout-padding>
-					<div ng-repeat="account in user.accounts" ng-model="account" ng-click="user.account_toggle($index)">
-						<md-list-item class="md-2-line">
-							<!-- TODO: Click change state event -->
-	                        <div class="md-avatar cloud_ic cloud_ic_{{$index}}" style="border-radius: 0px;">
-								<ng-include ng-if="account.active" src="'./Views/img/icons/ic_cloud_done_48px.svg'"></ng-include>
-								<ng-include  ng-if="!account.active" src="'./Views/img/icons/ic_cloud_off_48px.svg'"></ng-include>
-							</div>
-	                        <div class="md-list-item-text">
-	                            <h3>{{account.type}}</h3>
-	                            <h4>{{account.username}}</h4>
-	                        </div>
-	                    </md-list-item>
-					</div>
+                    <md-list-item class="md-2-line" ng-repeat="account in user.accounts">
+                        <!-- TODO: Click change state event -->
+                        <!--<div class="md-avatar cloud_ic cloud_ic_{{$index}}" style="border-radius: 0px;">
+                            <ng-include ng-if="account.active" src="'./Views/img/icons/ic_cloud_done_48px.svg'"></ng-include>
+							<ng-include  ng-if="!account.active" src="'./Views/img/icons/ic_cloud_off_48px.svg'"></ng-include>
+                        </div>
+					 class="account-check-{{$index}}"-->
+						<md-checkbox ng-model="account.active" aria-label="{{account.username}}" id="account-check-{{$index}}"></md-checkbox>
+                        <div class="md-list-item-text">
+                            <h3>{{account.type}}</h3>
+                            <h4>{{account.username}}</h4>
+                        </div>
+                    </md-list-item>
                 </md-list>
             </section>
         </md-content>
     </md-sidenav>
     <div layout="column" flex="">
-		<md-toolbar class="md-tall">
+        <md-toolbar class="md-tall">
             <div layout="column" layout-fill layout-align="start start">
-				<div layout="row" class="md-toolbar-tools">
-					<md-button class="md-icon-button" aria-label="Navigation" ng-click="toggleSidenav()" hide-gt-md>
-	                    <md-icon md-svg-icon="Views/img/icons/menu.svg"></md-icon>
-	                </md-button>
-					<h1>CloudView</h1>
-					<span flex></span>
-				</div>
-				<span flex></span>
-				<div layout="row" style="overflow-x: auto;" class="md-toolbar-tools">
-					<h1 style="white-space: nowrap;">My files &emsp;&gt;</h1>
-					<h1 ng-repeat="f in folder.path | parentFolder: 3" style="white-space: nowrap;">
-						<a ng-click="gotoFolder(f.pid)">&emsp;{{f.name}}&emsp;<span ng-if="!$last">&gt;</span></a>
-					</h1>
-				</div>
+                <div layout="row" class="md-toolbar-tools">
+                    <md-button class="md-icon-button" aria-label="Navigation" ng-click="toggleSidenav()" hide-gt-md>
+                        <md-icon md-svg-icon="Views/img/icons/menu.svg"></md-icon>
+                    </md-button>
+                    <h1>CloudView</h1>
+                    <span flex></span>
+                </div>
+                <span flex></span>
+                <div layout="row" style="overflow-x: auto;" class="md-toolbar-tools">
+                    <h1 style="white-space: nowrap;">My files &emsp;&gt;</h1>
+                    <h1 ng-repeat="f in folder.path | parentFolder: 3" style="white-space: nowrap;">
+                        <a ng-click="gotoFolder(f.pid)">&emsp;{{f.name}}&emsp;<span ng-if="!$last">&gt;</span>
+                        </a>
+                    </h1>
+                </div>
             </div>
         </md-toolbar>
         <md-content layout="column" flex="">
             <!-- TODO: stuff goes here -->
-			<div ng-show="(activeAccounts=(user.accounts | filter: {active: true })).length">
-				<div ng-show="(filteredFiles=(folder.files | selectedAccounts: user.accounts)).length || folder.subFolders.length">
-					<section ng-show="folder.subfolders.length">
-		                <md-subheader class="md-primary"><span style="padding-left: 8px;">Folders</span></md-subheader>
-		                <div layout="row" layout-wrap class="md-padding" style="padding-top: 0px;">
-		                    <div flex-xs="100" flex-sm="50" flex-md="25" flex-lg="20" flex-xl="10" ng-repeat="sub in folder.subfolders">
-		                        <md-card>
-									<md-tooltip md-delay="1000">
-										{{sub}}
-									</md-tooltip>
-		                            <md-card-content layout="row" layout-align="start center" style="padding: .5rem; overflow: hidden;">
-		                                <img src="Views/img/icons/folder.svg" style="height: 2rem; padding-right: .5rem;"/>
-		                                <p style="margin-top: 8px; margin-bottom: 8px; display: block; width: 100%" class="folder_item md-body-1">
-		                                    {{sub}}
-		                                </p>
-		                            </md-card-content>
-		                        </md-card>
-		                    </div>
-		                </div>
-		            </section>
-		            <section ng-show="filteredFiles.length">
-		                <md-subheader class="md-primary"><span style="padding-left: 8px;">Files</span></md-subheader>
-						<div class="md-padding" style="padding-top: 0px;">
-							<md-grid-list id="files"
-								md-cols-xs="2"
-								md-cols-sm="4"
-								md-cols-md="8"
-								md-cols-lg="10"
-								md-cols-xl="20"
-								md-row-height="1:1"
-								md-gutter="12px"
-								md-gutter-gt-sm="8px" >
-								<md-grid-tile ng-repeat="file in filteredFiles" class="account-{{file.account}}">
-								    <md-grid-tile-footer class="folder_file">
-										<md-tooltip md-delay="1000">
-											{{file.name}}
-										</md-tooltip>
-								        <h3 style="margin: 16px;" class="folder_item">{{file.name}}</h3>
-								    </md-grid-tile-footer>
-								</md-grid-tile>
-							</md-grid-list>
-						</div>
-		            </section>
-				</div>
-				<div ng-hide="filteredFiles.length || folder.subfolders.length" layout="column" layout-align="center center" flex>
-					<h1 class="md-body-1">This folder is empty.	</h1>
-				</div>
-			</div>
-			<div ng-hide="activeAccounts.length" layout="column" layout-align="center center" flex>
-				<h1 class="md-body-1">There are no active accounts. </h1>
-				<p ng-repeat="ac in acctiveAccounts">
-					{{ac.username}} | {{ac.active}}
-				</p>
-			</div>
+            <div ng-show="(activeAccounts=(user.accounts | filter: {active: true })).length">
+                <div ng-show="(filteredFiles=(folder.files | selectedAccounts: user.accounts)).length || folder.subFolders.length">
+                    <section ng-show="folder.subfolders.length">
+                        <md-subheader class="md-primary">
+                            <span style="padding-left: 8px;">Folders</span>
+                        </md-subheader>
+                        <div layout="row" layout-wrap class="md-padding" style="padding-top: 0px;">
+                            <div flex-xs="100" flex-sm="50" flex-md="25" flex-lg="20" flex-xl="10" ng-repeat="sub in folder.subfolders">
+                                <md-card>
+                                    <md-tooltip md-delay="1000">
+                                        {{sub}}
+                                    </md-tooltip>
+                                    <md-card-content layout="row" layout-align="start center" style="padding: .5rem; overflow: hidden;">
+                                        <img src="Views/img/icons/folder.svg" style="height: 2rem; padding-right: .5rem;"/>
+                                        <p style="margin-top: 8px; margin-bottom: 8px; display: block; width: 100%" class="folder_item md-body-1">
+                                            {{sub}}
+                                        </p>
+                                    </md-card-content>
+                                </md-card>
+                            </div>
+                        </div>
+                    </section>
+                    <section ng-show="filteredFiles.length">
+                        <md-subheader class="md-primary">
+                            <span style="padding-left: 8px;">Files</span>
+                        </md-subheader>
+                        <div class="md-padding" style="padding-top: 0px;">
+                            <md-grid-list id="files" md-cols-xs="2" md-cols-sm="4" md-cols-md="8" md-cols-lg="10" md-cols-xl="20" md-row-height="1:1" md-gutter="12px" md-gutter-gt-sm="8px">
+                                <md-grid-tile ng-repeat="file in filteredFiles" class="account-{{file.account}}">
+                                    <md-grid-tile-footer class="folder_file">
+                                        <md-tooltip md-delay="1000">
+                                            {{file.name}}
+                                        </md-tooltip>
+                                        <h3 style="margin: 16px;" class="folder_item">{{file.name}}</h3>
+                                    </md-grid-tile-footer>
+                                </md-grid-tile>
+                            </md-grid-list>
+                        </div>
+                    </section>
+                </div>
+                <div ng-hide="filteredFiles.length || folder.subfolders.length" layout="column" layout-align="center center" flex>
+                    <h1 class="md-body-1">This folder is empty.
+                    </h1>
+                </div>
+            </div>
+            <div ng-hide="activeAccounts.length" layout="column" layout-align="center center" flex>
+                <h1 class="md-body-1">There are no active accounts.
+                </h1>
+                <p ng-repeat="ac in acctiveAccounts">
+                    {{ac.username}}
+                    |
+                    {{ac.active}}
+                </p>
+            </div>
         </md-content>
     </div>
 </div>
